--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box !important;
-}
-
 .sectionHeading {
   border-left: solid 0.3rem #c0304f;
   max-width: 24rem !important;
@@ -13,6 +9,16 @@
 
 .pageMargin > div {
   margin: 1rem !important;
+}
+
+hr {
+  width: 0.3rem;
+  height: 2rem;
+}
+
+.buttonWidth {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .navbarSection {
@@ -57,7 +63,6 @@
 
 .heroSmallImage {
   border-radius: 50% 50% 0 0;
-  padding: 1rem 2rem;
 }
 
 .donateImage {
@@ -91,11 +96,6 @@
   margin-left: 1rem;
 }
 
-.unleashPotentialButton {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .unleashPotentialChurch {
   max-height: 36rem;
 }
@@ -114,11 +114,15 @@
 .mission .missionCard:hover .readMore {
   display: inline !important;
 }
-.mission .missionCard:hover .cardImage > img {
-  filter: invert(9%) sepia(10%) saturate(336%) hue-rotate(155deg) brightness(98%) contrast(88%);
-}
 .mission .cardImage {
   height: 3rem;
+}
+
+.articleImageContent {
+  max-width: 15rem;
+  background-color: white;
+  top: 2rem;
+  left: 3rem;
 }
 
 .footer {
