--- a/style.scss
+++ b/style.scss
@@ -4,10 +4,6 @@ $arrow-bg-color: #c0304f;
 $hero-section-color: #f6f2eb;
 $colored-section: #ffe6e0;
 
-* {
-  box-sizing: border-box !important;
-}
-
 // generic class
 
 .sectionHeading {
@@ -25,6 +21,14 @@ $colored-section: #ffe6e0;
   }
 }
 
+hr{
+  width: 0.3rem;
+  height: 2rem;
+}
+
+.buttonWidth {
+  width: fit-content;
+}
 // nav section start
 
 .navbarSection {
@@ -78,7 +82,7 @@ $colored-section: #ffe6e0;
 
 .heroSmallImage {
   border-radius: 50% 50% 0 0;
-  padding: 1rem 2rem;
+  // padding: 1rem 2rem;
 }
 
 .donateImage {
@@ -121,10 +125,6 @@ $colored-section: #ffe6e0;
 }
 
 // unleashPotential section start
-
-.unleashPotentialButton {
-  width: fit-content;
-}
 .unleashPotentialChurch {
   max-height: 36rem;
 }
@@ -147,17 +147,27 @@ $colored-section: #ffe6e0;
       .readMore {
         display: inline !important;
       }
-      .cardImage {
-        > img {
-          filter: invert(9%) sepia(10%) saturate(336%) hue-rotate(155deg)
-            brightness(98%) contrast(88%);
-        }
-      }
+      // .cardImage {
+      //   > img {
+      //     filter: invert(9%) sepia(10%) saturate(336%) hue-rotate(155deg)
+      //       brightness(98%) contrast(88%);
+      //   }
+      // }
     }
   }
   .cardImage {
     height: 3rem;
   }
+}
+
+
+// article Section
+
+.articleImageContent{
+  max-width: 15rem;
+  background-color: #ffff;
+  top: 2rem;
+  left: 3rem;
 }
 
 // footer section start
@@ -189,6 +199,11 @@ $colored-section: #ffe6e0;
   }
 
   // hero section
+
+  // .jesusImage{
+  //   height: 70rem;
+  // }
+
   .faithMotion {
     // transform: translateX(-50%);
     // position: absolute;
