--- a/style.scss
+++ b/style.scss
@@ -14,11 +14,11 @@ $colored-section: #ffe6e0;
 .pageMargin {
   margin-top: 6rem !important;
   > div {
-    margin: 1rem 0.4rem!important;
+    margin: 1rem 0.4rem !important;
   }
 }
 
-hr{
+hr {
   width: 0.3rem;
   height: 2rem;
 }
@@ -80,13 +80,10 @@ hr{
 
 .heroSmallImage {
   border-radius: 50% 50% 0 0;
-  img{
-    transform: translateX(60%);
-  }
 }
-.heroCrownLady{
+.heroCrownLady {
   border-radius: 50% 50% 0 0;
-  img{
+  img {
     transform: translateX(20%);
   }
 }
@@ -160,20 +157,38 @@ hr{
   }
 }
 
+// event
 
+.eventCardPhoto {
+  max-height: 18rem;
+}
 
+.eventCardContainer {
+  > div {
+    max-width: 20rem;
+  }
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 
 // article Section
 
-.articleImage{
+.articleImage {
   height: 27rem;
 }
 
-.articleImageContent{
+.articleImageContent {
   max-width: 16rem;
   background-color: #ffff;
   top: 5rem;
   left: 1.5rem;
+}
+
+.articleCardContainer {
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 // footer section start
@@ -196,14 +211,28 @@ hr{
 }
 
 @media (min-width: 576px) {
+  // members section
+
+  .memberButtonSection {
+    hr {
+      width: 16rem;
+    }
+  }
+
+  // event section
+
+  .eventCardContainer {
+    > div {
+      max-width: 45rem;
+    }
+  }
 
   // article Section
 
-  .articleImageContent{
+  .articleImageContent {
     top: 4rem;
     left: 2rem;
   }
-  
 }
 
 @media (min-width: 992px) {
@@ -221,7 +250,7 @@ hr{
     transform: translateX(-50%);
     position: absolute;
     left: 50vw;
-    bottom: -0.3rem;
+    bottom: -2.5rem;
   }
 
   .heroTitle {
@@ -250,12 +279,18 @@ hr{
 
   // our Work section
 
-  .handImage{
-    height: 20rem;
+  .handImage {
+    height: 16rem;
   }
-  .girlImage{
-    height: 35rem;
+  .girlImage {
+    height: 36rem;
   }
 
+  // members section
 
+  .memberButtonSection {
+    hr {
+      width: 25rem;
+    }
+  }
 }
