--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -13,9 +13,7 @@ $colored-section: #ffe6e0;
 
 .pageMargin {
   margin-top: 6rem !important;
-  > div {
-    margin: 1rem 0.4rem !important;
-  }
+
 }
 
 hr {
@@ -194,7 +192,7 @@ hr {
 // footer section start
 
 .footer {
-  background-image: url(images/footer/footer.png);
+  background-image: url(../assets/images/footer/footer.png);
   background-size: cover;
   background-position: center;
   color: white;
@@ -239,9 +237,7 @@ hr {
   // generic class
 
   .pageMargin {
-    > div {
-      margin: 1rem 8rem !important;
-    }
+    margin-top: 6rem !important;
   }
 
   // hero section
