--- a/frontend/styles/aboutUs.css
+++ b/frontend/styles/aboutUs.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
 * {
-  font-family: poppins;
+  font-family: "Poppins";
 }
 
 input {
@@ -14,6 +14,11 @@ button {
 
 .sectionHeading {
   font: 600 2rem Roboto;
+  color: #232526;
+}
+
+.boldTitle {
+  font: 600 1.8rem Roboto;
   color: #232526;
 }
 
@@ -82,14 +87,24 @@ button {
   background-color: #ffe6e0;
 }
 
-.happyPrayersNumber {
-  left: -3rem;
+.prayersNumber {
+  left: -3.3rem;
   top: -2rem;
 }
 
-.prayerCount {
-  right: -2rem;
+.prayerCountContainer {
+  right: -1rem;
   bottom: 0;
+  background-color: #c0304f;
+  color: white;
+  border-radius: 50%;
+  height: 10rem;
+  width: 10rem;
+  border: 0.2rem solid white;
+}
+.prayerCountContainer h4 {
+  font-family: "Roboto";
+  font-size: 2rem;
 }
 
 .footer {
