--- a/frontend/styles/aboutUs.scss
+++ b/frontend/styles/aboutUs.scss
@@ -13,7 +13,7 @@ $coloredSection: #ffe6e0;
 }
 
 * {
-  font-family: poppins;
+  font-family: 'Poppins';
 }
 
 input {
@@ -27,6 +27,7 @@ button {
 // generic class
 
 @include font-design(sectionHeading, 2rem, 600, Roboto, $headingColor);
+@include font-design(boldTitle, 1.8rem, 600, Roboto, $headingColor);
 @include font-design(cardHeading, 1.5rem, 600, Roboto, $headingColor);
 @include font-design(content, 0.9rem, 400, Poppins, $contentColor);
 @include font-design(boldContent, 1.1rem, 600, Poppins, $headingColor);
@@ -100,14 +101,24 @@ button {
 
 // happy prayers
 
-.happyPrayersNumber {
-  left: -3rem;
+.prayersNumber {
+  left: -3.3rem;
   top: -2rem;
 }
 
-.prayerCount {
-  right: -2rem;
+.prayerCountContainer {
+  right: -1rem;
   bottom: 0;
+  background-color: $arrowBgColor;
+  color: #ffff;
+  border-radius: 50%;
+  height: 10rem;
+  width: 10rem;
+  h4{
+    font-family: 'Roboto';
+    font-size: 2rem;
+  }
+  border: 0.2rem solid #ffff;
 }
 
 // footer section start
@@ -127,4 +138,5 @@ button {
   li > a {
     color: $contentColor;
   }
+  
 }
