--- a/frontend/styles/questions.css
+++ b/frontend/styles/questions.css
@@ -38,7 +38,7 @@ button {
 }
 
 .pageMargin {
-  margin-top: 6rem !important;
+  margin-top: 2rem !important;
 }
 
 .itemCount {
@@ -74,6 +74,46 @@ button {
   cursor: pointer;
 }
 
+.heroCarouselContainer > div {
+  width: 100vw;
+}
+.heroCarouselContainer::-webkit-scrollbar {
+  display: none;
+}
+
+.arrowContainer button {
+  border: 0;
+  background-color: #26070d;
+}
+.arrowContainer button:hover {
+  background-color: #c0304f;
+}
+
+button.accordion-button:not(.collapsed) {
+  background-color: white !important;
+  color: black !important;
+}
+button.accordion-button:focus {
+  color: black;
+  background-color: white;
+  box-shadow: none;
+  outline: none;
+}
+
+.leftAccordion, .rightAccordion {
+  flex: 1;
+}
+
+.accordionIndex span {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+}
+.accordionIndex:focus span {
+  background-color: #c0304f;
+  color: white;
+}
+
 .footer {
   background-image: url(http://127.0.0.1:3000/assets/footer/footer.png);
   background-size: cover;
@@ -86,4 +126,15 @@ button {
 
 .footerContent li > a {
   color: #747a82;
+}
+
+@media (min-width: 768px) {
+  .pageMargin {
+    margin-top: 6rem !important;
+  }
+  .arrowContainer {
+    position: absolute;
+    right: -2rem;
+    top: 30%;
+  }
 }/*# sourceMappingURL=questions.css.map */
