--- a/frontend/styles/questions.scss
+++ b/frontend/styles/questions.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
 
 $headingColor: #232526;
 $contentColor: #747a82;
@@ -37,7 +37,7 @@ button {
 }
 
 .pageMargin {
-  margin-top: 6rem !important;
+  margin-top: 2rem !important;
 }
 
 // nav section start
@@ -88,22 +88,91 @@ button {
   }
 }
 
+.heroCarouselContainer {
+  > div {
+    width: 100vw;
+  }
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.arrowContainer {
+  button {
+    border: 0;
+    background-color: #26070d;
+    &:hover {
+      background-color: $arrowBgColor;
+    }
+  }
+}
+
+
+// question section
+
+
+button.accordion-button{
+  
+  &:not(.collapsed){
+    background-color: white !important;
+    color: black !important;
+  }
+
+  &:focus{
+  color: black;
+  background-color: white;
+  box-shadow: none;
+  outline: none;
+  }
+  
+}
+
+.leftAccordion , .rightAccordion{
+  flex: 1;
+}
+
+.accordionIndex{
+  span{
+    display: inline-block;
+    width: 1.6rem;
+    height: 1.6rem;;
+  }
+  &:focus{
+    span{
+      background-color: $arrowBgColor;
+      color: #ffff;
+    }
+  }
+}
+
 
 // footer section start
 
 .footer {
-    background-image: url(http://127.0.0.1:3000/assets/footer/footer.png);
-    background-size: cover;
-    background-position: center;
-    color: white;
-  
-    button {
-      background-color: $arrowBgColor !important;
-    }
+  background-image: url(http://127.0.0.1:3000/assets/footer/footer.png);
+  background-size: cover;
+  background-position: center;
+  color: white;
+
+  button {
+    background-color: $arrowBgColor !important;
   }
-  
-  .footerContent {
-    li > a {
-      color: $contentColor;
-    }
+}
+
+.footerContent {
+  li > a {
+    color: $contentColor;
   }
+}
+
+@media (min-width: 768px) {
+  .pageMargin {
+    margin-top: 6rem !important;
+  }
+
+  .arrowContainer {
+    position: absolute;
+    right: -2rem;
+    top: 30%;
+  }
+}
