--- a/frontend/styles/home/index.scss
+++ b/frontend/styles/home/index.scss
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
 
 $headingColor: #232526;
 $contentColor: #747a82;
 $arrowBgColor: #c0304f;
 $heroSectionColor: #f6f2eb;
-$coloredSection : #ffe6e0;
-
+$coloredSection: #ffe6e0;
 
 @mixin font-design($name, $size, $weight, $family, $color) {
   .#{$name} {
@@ -14,12 +13,11 @@ $coloredSection : #ffe6e0;
   }
 }
 
-
-*{
+* {
   font-family: poppins;
 }
 
-input{
+input {
   outline: none;
 }
 
@@ -37,12 +35,6 @@ input{
 
 .pageMargin {
   margin-top: 6rem !important;
-
-}
-
-hr {
-  width: 0.3rem;
-  height: 2rem;
 }
 
 .buttonWidth {
@@ -54,41 +46,6 @@ hr {
 
 .navbarSection {
   background-color: $heroSectionColor;
-}
-
-.itemCount {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  background-color: $arrowBgColor;
-  color: white;
-  position: absolute;
-  top: -50%;
-  right: -70%;
-}
-
-.navbarContent {
-  border-bottom: 2px solid transparent !important;
-}
-
-.navbarContent:hover {
-  border-bottom: 2px solid;
-  border-image: linear-gradient(
-    to right,
-    $arrowBgColor,
-    $arrowBgColor 70%,
-    white 70%,
-    white 80%,
-    $arrowBgColor 80%,
-    $arrowBgColor
-  );
-  border-image-slice: 1;
-}
-
-.shrineLogo {
-  top: 20px;
-  left: 40vw;
 }
 
 .logo {
@@ -131,7 +88,7 @@ hr {
       }
     }
     .callPriceJoinusSection {
-      background-color: $coloredSection ;
+      background-color: $coloredSection;
       padding: 1.5rem;
       border-radius: 0.5rem;
     }
@@ -168,7 +125,7 @@ hr {
     min-width: 16rem;
     &:hover {
       cursor: pointer;
-      background-color: $coloredSection ;
+      background-color: $coloredSection;
       border-radius: 4rem 4rem 4rem 0;
       .readMore {
         display: inline !important;
@@ -177,6 +134,14 @@ hr {
   }
   .cardImage {
     height: 3rem;
+  }
+}
+
+// member section
+.memberButtonSection {
+  hr {
+    width: 0.3rem;
+    height: 2rem;
   }
 }
 
@@ -211,25 +176,6 @@ hr {
 .articleCardContainer {
   &::-webkit-scrollbar {
     display: none;
-  }
-}
-
-// footer section start
-
-.footer {
-  background-image: url(http://127.0.0.1:3000/assets/footer/footer.png);
-  background-size: cover;
-  background-position: center;
-  color: white;
-
-  button {
-    background-color: $arrowBgColor !important;
-  }
-}
-
-.footerContent {
-  li > a {
-    color: $contentColor;
   }
 }
 
